--- a/views/admin/edit-products.ejs
+++ b/views/admin/edit-products.ejs
@@ -29,19 +29,19 @@
 
                     <div class="form-group col-md-5">
                         <label for="exampleInputPassword4">Price</label>
-                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="Price"
+                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="Price"
                             name="price" value="<%= products.price  %>">
                     </div>
 
                     <div class="form-group col-md-5">
                         <label for="exampleInputPassword4">Market Price</label>
-                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="Market Price"
+                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="Market Price"
                             name="marketPrice" value="<%= products.marketPrice  %>">
                     </div>
 
                     <div class="form-group col-md-5">
                         <label for="exampleInputPassword4">Quantity</label>
-                        <input type="text" class="form-control" id="exampleInputPassword4" placeholder="quantity"
+                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="quantity"
                             name="quantity" value="<%= products.quantity %>">
                     </div>
 
