--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -40,8 +40,8 @@
                             <div class="product">
                                 <figure class="product-media">
                                     <span class="product-label label-sale">30% off</span>
-                                    <a href="/product/<%- products._id%> ">
-                                        <img src="/product-images/<%- products._id %>0.jpg " alt="Product image"
+                                    <a href="/product/<%- products._id%>">
+                                        <img src="/product-images/<%= products.img[0]%>" alt="Product image"
                                             class="product-image">
                                     </a>
 
