--- a/views/admin/add_products.ejs
+++ b/views/admin/add_products.ejs
@@ -33,7 +33,7 @@
               <label for="exampleInputPassword4" class="w-25">Price</label>
               <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
             </div>
-            <input type="text" class="form-control" id="price" placeholder="Price" name="price" required>
+            <input type="number" class="form-control" id="price" placeholder="Price" name="price" required>
           </div>
 
           <div class="form-group col-md-5">
@@ -41,7 +41,7 @@
               <label for="exampleInputPassword4" class="w-25">Market Price</label>
               <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
             </div>
-            <input type="text" class="form-control" id="price" placeholder="MarketPrice" name="marketPrice" required>
+            <input type="number" class="form-control" id="price" placeholder="MarketPrice" name="marketPrice" required>
           </div>
 
           <div class="form-group col-md-5">
@@ -49,7 +49,7 @@
               <label for="exampleInputPassword4" class="w-25">Quantity</label>
               <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
             </div>
-            <input type="text" class="form-control" id="quantity" placeholder="quantity" name="quantity" required>
+            <input type="number" class="form-control" id="quantity" placeholder="quantity" name="quantity" required>
           </div>
 
 
@@ -94,8 +94,8 @@
     </div>
   </div>
 </div>
-<script defer src="https://cdn.crop.guide/loader/l.js?c=SNMYPL"></script>
 
+<script defer src="https://cdn.crop.guide/loader/l.js?c=LBSDQS"></script>
 
 
 <script>
