--- a/views/admin/edit-category.ejs
+++ b/views/admin/edit-category.ejs
@@ -1,65 +1,80 @@
 <div class="col-md-6 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Edit Category</h4>
-            <form>
-                <p id="err" class="text-danger"></p>
-                <div class="form-group">
-                    <label>Category</label>
-                    <input type="text" class="form-control form-control-lg" placeholder="category name"
-                        aria-label="Username" name="name" id="value" value="<%=category.name%>">
-                </div>
-                <button type="button" onclick="validation()" class="btn btn-primary ml-3 mr-2 col-md-2">Submit</button>
-                <button  type="button" onclick="window.location.href ='http://localhost:3000/admin/category'" class="btn btn-light">Cancel</button>
-            </form>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Edit Category</h4>
+      <form>
+        <p id="err" class="text-danger"></p>
+        <div class="form-group">
+          <label>Category</label>
+          <input type="text" class="form-control form-control-lg" placeholder="category name" aria-label="Username" name="name" id="value" value="<%=category.name%>">
         </div>
+        <button type="button" onclick="validation()" class="btn btn-primary ml-3 mr-2 col-md-2">Submit</button>
+        <button type="button" onclick="window.location.href ='http://localhost:3000/admin/category'" class="btn btn-light">Cancel</button>
+      </form>
     </div>
+  </div>
 </div>
 
 
 <script>
+  function validation() {
 
 
-    function validation() {
-
-
-        const category = document.getElementById('value').value;
-        const err = document.getElementById('err');
-        let flag = 1;
-        if (category == "") {
-            err.innerText = "This field is required"
-            flag = 2;
-        }
-
-        if (flag == 1) {
-            submit(category)
-        }
-
+    const category = document.getElementById('value').value;
+    const err = document.getElementById('err');
+    let flag = 1;
+    if (category == "") {
+      err.innerText = "This field is required"
+      flag = 2;
     }
 
+    if (flag == 1) {
+      submit(category)
+    }
+
+  }
 
 
-    function submit(category) {
+
+  function submit(category) {
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+      if (result.isConfirmed) {
+
         fetch('/admin/edit-category/<%=category._id%>', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json'
+              'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                name: category
+              name: category
             })
-        })
+          })
+
+          .then((Response) => Response.json())
+          .then((res) => {
+            if (res.value == "success") {
+              window.location.href = '/admin/category'
+            } else {
+              document.getElementById('err').innerText = "Category already exists"
+            }
+          })
+
+        Swal.fire(
+          'Edited!',
+          'Category Has been Edited.',
+          'success'
+        )
+      }
+    })
 
 
-            .then((Response) => Response.json())
-            .then((res) => {
-                if (res.value == "success") {
-                    window.location.href = '/admin/category'
-                } else {
-                    document.getElementById('err').innerText = "Category already exists"
-                }
-            })
-    }
-
-
+  }
 </script>
