--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,88 +1,124 @@
 <div class="col-lg-10 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Products </h4>
-            <p class="card-description">
-            </p>
-            <a type="button" href="/admin/add-products"
-                class="btn btn-outline-info btn-sm btn-icon-text ti-upload btn-icon-prepend">
-                Add New Products
-            </a>
-            <div class="table-responsive pt-3">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>
-                                #
-                            </th>
-                            <th>
-                                Image
-                            </th>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Stock
-                            </th>
-                            <th>
-                                Price
-                            </th>
-                            <th>
-                                Description
-                            </th>
-                            <th>
-                                Edit/Delete
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% products.forEach((products,index)=>{ %>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Products </h4>
+      <p class="card-description">
+      </p>
+      <a type="button" href="/admin/add-products" class="btn btn-outline-info btn-sm btn-icon-text ti-upload btn-icon-prepend">
+        Add New Products
+      </a>
+      <div class="table-responsive pt-3">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>
+                #
+              </th>
+              <th>
+                Image
+              </th>
+              <th>
+                Name
+              </th>
+              <th>
+                Stock
+              </th>
+              <th>
+                Price
+              </th>
+              <th>
+                Description
+              </th>
+              <th>
+                Edit/Delete
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <% products.forEach((products,index)=>{ %>
 
-                            <tr>
-                                <td>
-                                    <%- index+1 %>
-                                </td>
-                                <td>
-                                    <img src=/product-images/<%=products._id %>1.jpg alt="img goes here">
-                                </td>
-                                <td>
-                                    <%- products.name %>
-                                </td>
-                                <td>
-                                    <!-- <div class="progress">
+            <tr>
+              <td>
+                <%- index+1 %>
+              </td>
+              <td>
+                <img src=/product-images/<%=products.img[0] %> alt="img goes here">
+              </td>
+              <td>
+                <%- products.name %>
+              </td>
+              <td>
+                <!-- <div class="progress">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
                                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> -->
-                                    <%- products.quantity %>
-                                </td>
-                                <td>
-                                    <%- products.price %>
-                                </td>
+                <%- products.quantity %>
+              </td>
+              <td>
+                <%- products.price %>
+              </td>
 
-                                <td >
-                                    <div style="width:20em;height:6em; overflow: hidden">
-                                        <%- products.description %>
-                                    </div>
-                                </td>
+              <td>
+                <div style="width:20em;height:6em; overflow: hidden">
+                  <%- products.description %>
+                </div>
+              </td>
 
-                                <td>
-                                    <a type="button" href=./edit-products/<%=products._id%> class="btn btn-outline-info
+              <td>
+                <a type="button" href=./edit-products/<%=products._id%> class="btn btn-outline-info
                                         btn-sm btn-icon-text ti-file btn-icon-append">
-                                        Edit
-                                    </a>
+                  Edit
+                </a>
 
 
-                                    <a type="button" href="/admin/delete-products/<%- products._id%>"
-                                        class="btn btn-outline-danger btn-sm btn-icon-text ti-alert btn-icon-prepend"
-                                        onclick="return confirm('are you sure want to delete <%- products.name  %> ?')">
-                                        Delete
-                                    </a>
-                                </td>
-                            </tr>
-                            <% }) %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+                <a type="button" class="btn btn-outline-danger btn-sm btn-icon-text ti-alert btn-icon-prepend" onclick="toast('<%- products._id%>')">
+                  Delete
+                </a>
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
+
+<script>
+  function toast(prodId) {
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/admin/delete-products/' + prodId,
+          method: 'delete',
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }else{
+               Swal.fire(
+               'ERR!',
+               'oops Something went wrong.',
+               'error'
+               )
+            }
+          }
+        })
+        Swal.fire(
+          'Deleted!',
+          'Your file has been deleted.',
+          'success'
+        )
+      }
+    })
+
+  }
+</script>
