--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -35,42 +35,38 @@
           </thead>
           <tbody>
             <% users.forEach((users,index)=>{ %>
-              <tr>
-                <td class="py-1">
-                  <%- index+1 %>
-                </td>
-                <td>
-                  <%- users.name %> <br>
-                </td>
-                <td>
-                  <%- users.mobile %>
-                </td>
-                <td>
-                  <%- users.email %>
-                </td>
-                <td>
+            <tr>
+              <td class="py-1">
+                <%- index+1 %>
+              </td>
+              <td>
+                <%- users.name %> <br>
+              </td>
+              <td>
+                <%- users.mobile %>
+              </td>
+              <td>
+                <%- users.email %>
+              </td>
+              <td>
 
-                  <% if (users.blocked){%>
+                <% if (users.blocked){%>
 
-                    <a type="button" href="/admin/user-unblock/<%- users._id %> "
-                      class="btn btn-danger btn-sm btn-icon-text  btn-icon-prepend"
-                      onclick="return confirm('are you sure want to unblock <%- users.name  %> ?')">
-                      Unblock
-                    </a>
+                <a type="button" onclick="unblockUser('<%- users._id %>',' <%- users.name  %>')" class="btn btn-danger btn-sm btn-icon-text  btn-icon-prepend">
+                  Unblock
+                </a>
 
-                    <% }else{ %>
+                <% }else{ %>
 
-                      <a type="button" href="/admin/user-block/<%- users._id %>"
-                        class="btn btn-success btn-sm btn-icon-text btn-icon-prepend"
-                        onclick="return confirm('are you sure want to block <%- users.name %>')">
-                        block
-                      </a>
+                <a type="button" onclick="blockUser('<%- users._id %>',' <%- users.name  %>')" class="btn btn-success btn-sm btn-icon-text btn-icon-prepend">
+                  block
+                </a>
 
-                      <% } %>
+                <% } %>
 
-                </td>
-              </tr>
-              <% }) %>
+              </td>
+            </tr>
+            <% }) %>
           </tbody>
         </table>
       </div>
@@ -80,6 +76,8 @@
 
 
 <script>
+  /*=============tableSearch===================*/
+
   function myFunction() {
     var input, filter, table, tr, td, i, txtValue;
     input = document.getElementById("myInput");
@@ -97,5 +95,66 @@
         }
       }
     }
+  }
+
+  function blockUser(userId, userName) {
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "Do You Want To Block " + userName,
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/admin/user-block/' + userId,
+          method: 'put',
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }
+          }
+        })
+        Swal.fire(
+          'Blocked!',
+          userName + ' has been blocked.',
+          'success'
+        )
+      }
+    })
+  }
+
+  function unblockUser(userId, userName) {
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "Do You Want To unblock " + userName,
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/admin/user-unblock/' + userId,
+          method: 'put',
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }
+          }
+        })
+        Swal.fire(
+          'Block!',
+          userName + ' has been blocked.',
+          'success'
+        )
+      }
+    })
+
   }
 </script>
