--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,88 +2,131 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>RIG-X-</title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Molla - Bootstrap eCommerce Template">
-    <meta name="author" content="p-themes">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="/images/icons/site.html">
-    <link rel="mask-icon" href="/images/icons/safari-pinned-tab.svg" color="#666666">
-    <link rel="shortcut icon" href="/images/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Molla">
-    <meta name="application-name" content="Molla">
-    <meta name="msapplication-TileColor" content="#cc9966">
-    <meta name="msapplication-config" content="/assets/images/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/stylesheets/line-awesome.min.css">
-    <!-- Plugins CSS File -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="/stylesheets/plugins/magnific-popup/magnific-popup.css">
-    <link rel="stylesheet" href="/stylesheets/plugins/jquery.countdown.css">
-    <!-- Main CSS File -->
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="/stylesheets/skin-demo-4.css">
-    <link rel="stylesheet" href="/stylesheets/demo-4.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>RIG-X-</title>
+  <meta name="keywords" content="HTML5 Template">
+  <meta name="description" content="Molla - Bootstrap eCommerce Template">
+  <meta name="author" content="p-themes">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
+  <link rel="manifest" href="/images/icons/site.html">
+  <link rel="mask-icon" href="/images/icons/safari-pinned-tab.svg" color="#666666">
+  <link rel="shortcut icon" href="/images/icons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Molla">
+  <meta name="application-name" content="Molla">
+  <meta name="msapplication-TileColor" content="#cc9966">
+  <meta name="msapplication-config" content="/assets/images/icons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="/stylesheets/line-awesome.min.css">
+  <!-- Plugins CSS File -->
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/plugins/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" href="/stylesheets/plugins/magnific-popup/magnific-popup.css">
+  <link rel="stylesheet" href="/stylesheets/plugins/jquery.countdown.css">
+  <!-- Main CSS File -->
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/skin-demo-4.css">
+  <link rel="stylesheet" href="/stylesheets/demo-4.css">
 
-    <style>
+  <script src="https://www.paypal.com/sdk/js?client-id=<%= locals.paypalClientId %>&currency=USD"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 
-/* The snackbar - position it at the bottom and in the middle of the screen */
-#snackbar {
-  visibility: hidden; /* Hidden by default. Visible on click */
-  min-width: 100px; /* Set a default minimum width */
-  margin-left: -50px; /* Divide value of min-width by 2 */
-  background-color: rgb(205, 201, 201); /* Black background color */
-  color: rgb(253, 253, 253); /* White text color */
-  text-align: center; /* Centered text */
-  border-color: black;
-  border-width: 10px;
-  border-radius: 10px; /* Rounded borders */
-  padding: 10px; /* Padding */
-  position: fixed; /* Sit on top of the screen */
-  z-index: 1; /* Add a z-index if needed */
-  left: 47%; /* Center the snackbar */
-  bottom: 30px; /* 30px from the bottom */
-}
+  <style>
+    /* The snackbar - position it at the bottom and in the middle of the screen */
+    #snackbar {
+      visibility: hidden;
+      /* Hidden by default. Visible on click */
+      min-width: 100px;
+      /* Set a default minimum width */
+      margin-left: -50px;
+      /* Divide value of min-width by 2 */
+      background-color: rgb(205, 201, 201);
+      /* Black background color */
+      color: rgb(253, 253, 253);
+      /* White text color */
+      text-align: center;
+      /* Centered text */
+      border-color: black;
+      border-width: 10px;
+      border-radius: 10px;
+      /* Rounded borders */
+      padding: 10px;
+      /* Padding */
+      position: fixed;
+      /* Sit on top of the screen */
+      z-index: 1;
+      /* Add a z-index if needed */
+      left: 47%;
+      /* Center the snackbar */
+      bottom: 30px;
+      /* 30px from the bottom */
+    }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
-#snackbar.show {
-  visibility: visible; /* Show the snackbar */
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    /* Show the snackbar when clicking on a button (class added with JavaScript) */
+    #snackbar.show {
+      visibility: visible;
+      /* Show the snackbar */
+      /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
   However, delay the fade out process for 2.5 seconds */
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
+      -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+      animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    }
 
-/* Animations to fade the snackbar in and out */
-@-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
+    /* Animations to fade the snackbar in and out */
+    @-webkit-keyframes fadein {
+      from {
+        bottom: 0;
+        opacity: 0;
+      }
 
-@keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
+      to {
+        bottom: 30px;
+        opacity: 1;
+      }
+    }
 
-@-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
+    @keyframes fadein {
+      from {
+        bottom: 0;
+        opacity: 0;
+      }
 
-@keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
+      to {
+        bottom: 30px;
+        opacity: 1;
+      }
+    }
 
-    </style>
+    @-webkit-keyframes fadeout {
+      from {
+        bottom: 30px;
+        opacity: 1;
+      }
+
+      to {
+        bottom: 0;
+        opacity: 0;
+      }
+    }
+
+    @keyframes fadeout {
+      from {
+        bottom: 30px;
+        opacity: 1;
+      }
+
+      to {
+        bottom: 0;
+        opacity: 0;
+      }
+    }
+  </style>
 </head>
 
 
@@ -92,47 +135,54 @@
 
 
 
-    <%- include('partials/header-main') %>
+  <%- include('partials/header-main') %>
 
-        <%- body %>
-
-
-            <%- include('partials/footer') %>
+  <%- body %>
 
 
+  <%- include('partials/footer') %>
 
 
 
-            <script>
-                function myFunction() {
-                        // Get the snackbar DIV
-                        var x = document.getElementById("snackbar");
 
-                        // Add the "show" class to DIV
-                        x.className = "show";
 
-                        // After 3 seconds, remove the show class from DIV
-                        setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
-                    }
-            </script>
+  <script>
+    function myFunction() {
+      // Get the snackbar DIV
+      var x = document.getElementById("snackbar");
 
-                <!-- Plugins JS File -->
-                <script src="/javascripts/jquery.min.js"></script>
-                <script src="/javascripts/bootstrap.bundle.min.js"></script>
-                <script src="/javascripts/jquery.hoverIntent.min.js"></script>
-                <script src="/javascripts/jquery.waypoints.min.js"></script>
-                <script src="/javascripts/superfish.min.js"></script>
-                <script src="/javascripts/owl.carousel.min.js"></script>
-                <script src="/javascripts/bootstrap-input-spinner.js"></script>
-                <script src="/javascripts/jquery.plugin.min.js"></script>
-                <script src="/javascripts/jquery.magnific-popup.min.js"></script>
-                <script src="/javascripts/jquery.countdown.min.js"></script>
-                <!-- Main JS File -->
-                <script src="/javascripts/main.js"></script>
-                <script src="/javascripts/demo-4.js"></script>
+      // Add the "show" class to DIV
+      x.className = "show";
 
-                <script src="/javascripts/jquery.elevateZoom.min.js"></script>
-                <!-- Main JS File -->
+      // After 3 seconds, remove the show class from DIV
+      setTimeout(function() {
+        x.className = x.className.replace("show", "");
+      }, 3000);
+    }
+  </script>
+
+
+
+
+
+  <!-- Plugins JS File -->
+  <script src="/javascripts/jquery.min.js"></script>
+  <script src="/javascripts/bootstrap.bundle.min.js"></script>
+  <script src="/javascripts/jquery.hoverIntent.min.js"></script>
+  <script src="/javascripts/jquery.waypoints.min.js"></script>
+  <script src="/javascripts/superfish.min.js"></script>
+  <script src="/javascripts/owl.carousel.min.js"></script>
+  <script src="/javascripts/bootstrap-input-spinner.js"></script>
+  <script src="/javascripts/jquery.plugin.min.js"></script>
+  <script src="/javascripts/jquery.magnific-popup.min.js"></script>
+  <script src="/javascripts/jquery.countdown.min.js"></script>
+  <!-- Main JS File -->
+  <script src="/javascripts/main.js"></script>
+  <script src="/javascripts/demo-4.js"></script>
+
+
+  <script src="/javascripts/jquery.elevateZoom.min.js"></script>
+  <!-- Main JS File -->
 
 </body>
 
