--- a/views/partials/header-main.ejs
+++ b/views/partials/header-main.ejs
@@ -33,9 +33,8 @@
                             <ul>
                                 <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li>
-                                <li><a href="/about-us">About Us</a></li>
-                                <li><a href="">Contact Us</a></li>
-                                <li><a href="/logout"><i class="icon-user"></i>logout</a></li>
+                                <li><a href="/account"><i class="icon-user"></i><%= locals.userName %> </a></li>
+                                <li><a href="/logout">logout</a></li>
                             </ul>
                         </li>
                     </ul><!-- End .top-menu -->
