--- a/views/user/otp-login.ejs
+++ b/views/user/otp-login.ejs
@@ -1,134 +1,143 @@
 <main class="main">
-    <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
-        style="background-image: url('/images/backgrounds/login-bg.jpg')">
-        <div class="container">
-            <div class="form-box">
-                <div class="form-tab">
-                    <ul class="nav nav-pills nav-fill" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" id="register-tab-2" data-toggle="tab" role="tab"
-                                aria-controls="register-2" aria-selected="true">OTP Login</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="register-2" role="tabpanel"
-                            aria-labelledby="register-tab-2">
-                            <form action="#">
+  <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('/images/backgrounds/login-bg.jpg')">
+    <div class="container">
+      <div class="form-box">
+        <div class="form-tab">
+          <ul class="nav nav-pills nav-fill" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="register-tab-2" data-toggle="tab" role="tab" aria-controls="register-2" aria-selected="true">OTP Login</a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
+              <form action="#">
 
-                                <div class="form-group">
-                                    <label for="register-password-2">Mobile</label>
-                                    <p id="err" class="text-danger"></p>
-                                    <input type="tel" class="form-control" id="mobile" name="mobile" required>
-                                </div><!-- End .form-group -->
-                                <button type="button" onclick="validation()" class="btn btn-outline-primary-2">
-                                    <span>SEND OTP</span>
-                                    <i class="icon-long-arrow-right"></i>
-                                </button>
-                                <div class="form-group">
-                                    <p id="err"></p>
-                                    <label for="register-email-2">Enter otp</label>
-                                    <input type="tel" class="form-control" id="otp" name="otp" required>
-                                </div><!-- End .form-group -->
+                <div class="col-12 form-group d-flex ">
+                  <label for="register-password-2" class="w-25">Mobile</label>
+                  <p id="err" class="text-danger w-75 justify-content-end"></p>
+                </div><!-- End .form-group -->
+                <input type="tel" class="form-control" id="mobile" name="mobile" required>
+                <div>
+                  <button type="button" onclick="validation()" class="btn btn-outline-primary-2">
+                    <span>SEND OTP</span>
+                    <i class="icon-long-arrow-right"></i>
+                  </button>
+                  <span class="text-primary" onclick="location.replace('/signup')" id="createAcc" hidden>Create Account</span>
+                </div>
 
-                                <div class="form-footer">
-                                    <button type="button" onclick="verify()" class="btn btn-outline-primary-2">
-                                        <span>Login</span>
-                                        <i class="icon-long-arrow-right"></i>
-                                    </button>
 
-                                    <div class="ml-2">
-                                        <label class="custom-control-label" for="register-policy-2">Don't have an
-                                            account ? <a href="/signup"> create account Now</a></label>
-                                    </div><!-- End .custom-checkbox -->
-                                </div><!-- End .form-footer -->
-                            </form>
-                        </div><!-- End .row -->
-                    </div><!-- End .form-choice -->
-                </div><!-- .End .tab-pane -->
-            </div><!-- End .tab-content -->
-        </div><!-- End .form-tab -->
-    </div><!-- End .form-box -->
-    </div><!-- End .container -->
-    </div><!-- End .login-page section-bg -->
+                <div class="form-group">
+                  <p id="errOTP"></p>
+                  <label for="register-email-2">Enter otp</label>
+                  <input type="tel" class="form-control" id="otp" name="otp" required>
+
+                </div><!-- End .form-group -->
+
+                <div class="form-footer">
+                  <div>
+                    <button type="button" onclick="verify()" class="btn btn-outline-primary-2">
+                      <span>Login</span>
+                      <i class="icon-long-arrow-right"></i>
+                    </button>
+                    <p id="timer" class="text-danger"></p>
+                  </div>
+
+                  <div class="ml-2">
+                    <label class="custom-control-label" for="register-policy-2">Don't have an
+                      account ? <a href="/signup"> create account Now</a></label>
+                  </div><!-- End .custom-checkbox -->
+                </div><!-- End .form-footer -->
+              </form>
+            </div><!-- End .row -->
+          </div><!-- End .form-choice -->
+        </div><!-- .End .tab-pane -->
+      </div><!-- End .tab-content -->
+    </div><!-- End .form-tab -->
+  </div><!-- End .form-box -->
+  </div><!-- End .container -->
+  </div><!-- End .login-page section-bg -->
 </main><!-- End .main -->
 
 
 <script>
+  function validation() {
 
-    function validation() {
+    const mobile = document.getElementById('mobile').value;
+    const mobileValue = mobile?.trim();
+    const err1 = document.getElementById('err')
+    err1.innerText = ""
 
+    let flag = 1
 
-
-
-        const mobile = document.getElementById('mobile').value;
-
-        const mobileValue = mobile?.trim();
-
-        const err1 = document.getElementById('err')
-        err1.innerText = ""
-
-        let flag = 1
-
-        if (mobileValue == '') {
-            err1.innerText = "This Field is required"
-            flag = 2
-        } else if (!mobileValue.match(/^[0-9]{10}$/)) {
-            err1.innerText = "Enter a valid mobile number"
-            flag = 2
-        }
-
-
-        if (flag == 1) {
-            submit1(mobileValue);
-        }
-
-        function submit1(mobileValue) {
-            fetch(`/otp-login/${mobileValue}`, {
-                method: "GET",
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            })
-        }
+    if (mobileValue == '') {
+      err1.innerText = "This Field is required"
+      flag = 2
+    } else if (!mobileValue.match(/^[0-9]{10}$/)) {
+      err1.innerText = "Enter a valid mobile number"
+      flag = 2
     }
 
 
+    if (flag == 1) {
+      submit1(mobileValue);
+    }
 
-        function verify() {
+    function submit1(mobileValue) {
+      fetch(`/otp-login/${mobileValue}`, {
+          method: "GET",
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        }).then((res) => res.json())
+        .then((res) => {
+          if (res.status == false) {
+            err1.innerText = "User Does Not Exist"
+            document.getElementById('createAcc').removeAttribute('hidden')
+          }
+        })
+    }
+  }
 
 
-            const otp = document.getElementById('otp').value
 
+  function verify() {
 
-            const otpValue = otp?.trim();
+    const otp = document.getElementById('otp').value
+    const otpValue = otp?.trim();
+    submit(otpValue);
 
-            submit(otpValue);
+  }
+
+  function submit(otpValue) {
+
+    const number = document.getElementById('mobile').value;
+    let err = document.getElementById('errOTP')
+    let timer = document.getElementById('timer')
+    fetch('/otp-verify?mobileNumber=91' + number + '&code=' + otpValue, {
+        method: 'GET',
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then((res) => res.json())
+      .then((res) => {
+        if (res.value == true) {
+          window.location.href = '/'
+        } else {
+          err.innerText = "OTP is incorrect"
+          let i = 0;
+          let t = setInterval(() => {
+            if (i == 60) {
+              clearInterval(t)
+            }
+            if (i <= 50) {
+              document.getElementById('timer').innerText = 60 - i++
+            } else {
+              document.getElementById('timer').innerText = '0' + 60 - 1
+            }
+          }, 1000);
         }
 
-
-            function submit(otpValue) {
-                const number = document.getElementById('mobile').value;
-                fetch('/otp-verify?mobileNumber=91' + number + '&code=' + otpValue, {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                })
-                    .then((res) => res.json())
-                    .then((res) => {
-                        if (res.value == "success") {
-
-                            window.location.href = '/'
-                        } else {
-                            window.location.href = '/'
-                        }
-
-                    })
-            }
-        
-
-
-
-    
-
+      })
+  }
 </script>
